--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -7,18 +7,15 @@ import "../styles/index.css";
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="icon" type="image/svg+xml" href="https://bun.sh/logo.svg" />
+<link rel="alternate icon" type="image/png" href="https://bun.sh/logo-square.png" />
 
 <link rel="sitemap" href="/sitemap.xml" />
 
 <!-- Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-	href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap"
-	rel="stylesheet"
-/>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap" rel="stylesheet" />
 
 <!-- Scrollable a11y code helper -->
 <script src="/make-scrollable-code-focusable.js" is:inline>
