--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -114,6 +114,9 @@ const githubEditUrl = CONFIG.GITHUB_EDIT_URL && CONFIG.GITHUB_EDIT_URL + current
 <body>
 	<Header {currentPage} />
 	<main class="layout">
+		<h1>
+			Please note that this is just a concept and that the docs are oudated by now for active docs you need to read the bun readme
+		</h1>
 		<aside id="grid-left" class="grid-sidebar" title="Site Navigation">
 			<LeftSidebar {currentPage} />
 		</aside>
